<?xml version="1.0"?>
<package format="2">
  <name>shakestation</name>
  <version>0.0.0</version>
  <description>The shakestation package</description>
  <maintainer email="rob@pointcloud.com">Rob Roberts</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>manipulator_h_base_module_msgs</depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
